# compilation_toolchain_llvm

./: .gitignore  README.md
Passes/: CMakeLists.txt
Passes/includes/: Clexma.h
Passes/src/: Clexma.cpp
compilation_toolchain_llvm-main/dyn_pass_prj/: CMakeLists.txt
compilation_toolchain_llvm-main/target_project_template/: CMakeLists.txt  build_dataset.py  build_prj.py  single_file_bench.py
compilation_toolchain_llvm-main/target_project_template/result/: CI-funptr_analysis.txt  CI-global_analysis.txt  array-constIdx_analysis.txt  array-varIdx2_analysis.txt  array-varIdx_analysis.txt  array_alias_2_analysis.txt  arraycopy1_analysis.txt  branch-intra_analysis.txt  branch_1_analysis.txt  branch_2_analysis.txt  branch_3_analysis.txt  constraint-cycle-copy_analysis.txt  constraint-cycle-field_analysis.txt  cs15_analysis.txt  cs16_analysis.txt  cs18_analysis.txt  cs19_analysis.txt  cs21_analysis.txt  cs2_analysis.txt  cs4_analysis.txt  cs5_analysis.txt  cs6_analysis.txt  cs7_analysis.txt  cs9_analysis.txt  field-ptr-arith-constIdx_analysis.txt  field-ptr-arith-varIdx_analysis.txt  funcpoiner_analysis.txt  function_pointer_2_analysis.txt  function_pointer_analysis.txt  funptr-nested-struct-simple_analysis.txt  global-call-struct_analysis.txt  global-const-struct_analysis.txt  global-initializer_analysis.txt  global-nested-calls_analysis.txt  global-simple_analysis.txt  global_1_analysis.txt  global_2_analysis.txt  global_4_analysis.txt  global_5_analysis.txt  heap-linkedlist_analysis.txt  (+51 more)
compilation_toolchain_llvm-main/target_project_template/single_file_data/src/: array3.c  ben4.c  ben8.c  byteoffset1.c  cs10.c  cs12.c  cs14.c  cs18.c  cs8.c  path1.c  recur7.c  test-clone1.c  test-globalstruct.c  test-indirect1.c  test-recursive0.c  test.c  test1.c
compilation_toolchain_llvm-main/target_project_template/training_data/prompt/: CI-funptr_prompt.txt  CI-global_prompt.txt  CI-local_prompt.txt  array-constIdx_prompt.txt  array-varIdx2_prompt.txt  array-varIdx_prompt.txt  array_alias_1_prompt.txt  array_alias_2_prompt.txt  array_alias_3_prompt.txt  array_alias_4_prompt.txt  array_alias_5_prompt.txt  arraycopy1_prompt.txt  branch-call_prompt.txt  branch-intra_prompt.txt  branch_1_prompt.txt  branch_2_prompt.txt  branch_3_prompt.txt  byteoffset1_prompt.txt  constraint-cycle-copy_prompt.txt  constraint-cycle-field_prompt.txt  cs0_prompt.txt  cs10_prompt.txt  cs11_prompt.txt  cs12_prompt.txt  cs13_prompt.txt  cs14_prompt.txt  cs15_prompt.txt  cs16_prompt.txt  cs17_prompt.txt  cs18_prompt.txt  cs19_prompt.txt  cs1_prompt.txt  cs20_prompt.txt  cs21_prompt.txt  cs2_prompt.txt  cs3_prompt.txt  cs4_prompt.txt  cs5_prompt.txt  cs6_prompt.txt  cs7_prompt.txt  (+96 more)
compilation_toolchain_llvm-main/target_project_template/training_data/src/: CI-local_labelled.c  array-constIdx_labels.txt  array-varIdx2_labels.txt  array_alias_1_labelled.c  array_alias_2_labels.txt  array_alias_5_labelled.c  byteoffset1_labelled.c  constraint-cycle-copy_labelled.c  constraint-cycle-copy_labels.txt  constraint-cycle-field_labelled.c  constraint-cycle-field_labels.txt  cs0_labels.txt  cs10_labels.txt  cs11_labelled.c  cs11_labels.txt  cs12_labelled.c  cs12_labels.txt  cs13_labelled.c  cs14_labelled.c  cs14_labels.txt  cs15_labelled.c  cs15_labels.txt  cs18_labels.txt  cs1_labelled.c  cs21_labels.txt  cs2_labelled.c  cs5_labels.txt  cs6_labelled.c  (+64 more)
(+745 files in other folders)
